[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Tilesets/Tetrisl.tres" type="TileSet" id=1]
[ext_resource path="res://Assets/Scripts/Tetris/TetrisPool.gd" type="Script" id=2]
[ext_resource path="res://Assets/Music/Myuu-Tetris-Dark-Version.mp3" type="AudioStream" id=3]

[node name="TetrixPool" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 72, 72 )
format = 1
tile_data = PoolIntArray( -983060, 0, 0, -983052, 1, 0, -983051, 0, 0, -983050, 1, 0, -983049, 0, 0, -983048, 0, 0, -983047, 0, 0, -983046, 0, 0, -1048571, 0, 0, -1048570, 0, 0, -1048569, 1, 0, -1048568, 0, 0, -1048567, 1, 0, -1048566, 0, 0, -917516, 0, 0, -917515, 0, 0, -917514, 0, 0, -917513, 1, 0, -917512, 0, 0, -917511, 0, 0, -917510, 0, 0, -983035, 0, 0, -983034, 0, 0, -983033, 1, 0, -983032, 1, 0, -983031, 1, 0, -983030, 0, 0, -851980, 0, 0, -851979, 0, 0, -851978, 1, 0, -851977, 0, 0, -851976, 0, 0, -851975, 0, 0, -851974, 1, 0, -786444, 0, 0, -786443, 0, 0, -786442, 0, 0, -786441, 0, 0, -786440, 1, 0, -786439, 0, 0, -786438, 0, 0, -851963, 0, 0, -851962, 0, 0, -851961, 0, 0, -851960, 0, 0, -851959, 0, 0, -851958, 0, 0, -720908, 0, 0, -720907, 1, 0, -720906, 0, 0, -720905, 1, 0, -720904, 0, 0, -720903, 1, 0, -720902, 0, 0, -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -786423, 0, 0, -786422, 0, 0, -655372, 0, 0, -655371, 1, 0, -655370, 1, 0, -655369, 0, 0, -655368, 0, 0, -655367, 0, 0, -655366, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -720886, 0, 0, -589836, 0, 0, -589835, 0, 0, -589834, 0, 0, -589833, 0, 0, -589832, 0, 0, -589831, 0, 0, -589830, 0, 0, -655355, 0, 0, -655354, 0, 0, -655353, 0, 0, -655352, 0, 0, -655351, 0, 0, -655350, 0, 0, -524300, 1, 0, -524299, 0, 0, -524298, 0, 0, -524297, 0, 0, -524296, 1, 0, -524295, 1, 0, -524294, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -458764, 0, 0, -458763, 0, 0, -458762, 1, 0, -458761, 0, 0, -458760, 1, 0, -458759, 1, 0, -458758, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -393228, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 1, 0, -393224, 0, 0, -393223, 1, 0, -393222, 0, 0, -458747, 0, 0, -458746, 1, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -327692, 0, 0, -327691, 0, 0, -327690, 0, 0, -327689, 0, 0, -327688, 0, 0, -327687, 0, 0, -327686, 0, 0, -393211, 0, 0, -393210, 1, 0, -393209, 1, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 1, 0, -327672, 1, 0, -327671, 0, 0, -327670, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 1, 0, -262135, 0, 0, -262134, 0, 0, -131079, 0, 0, -131078, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 1, 0, -196599, 0, 0, -196598, 0, 0, -65542, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, 65524, 0, 0, 65525, 1, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 1, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 1, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 1, 0, 4, 1, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 131060, 0, 0, 131061, 1, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 1, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 1, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 1, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 196596, 0, 0, 196597, 1, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 1, 0, 196605, 0, 0, 196606, 1, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 1, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 1, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 1, 0 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 0, -1152 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="game_over" from="." to="." method="_on_TetrixPool_game_over"]
[connection signal="lines_removed" from="." to="." method="_on_TetrixPool_lines_removed"]
